--- a/javascript/dom_ex04.html
+++ b/javascript/dom_ex04.html
@@ -10,7 +10,7 @@
     <h1>현재 시각 : </h1>
     <div id = "current"></div>
 
-    <script>
+    <script>//hello
         let now = new Date();
 
         function textCon(){
