--- a/javascript/dom_ex04.html
+++ b/javascript/dom_ex04.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <button onclick="textCon();">textContent로 표시하기</button>
+    <button onclick="textCon();">textContent로 표시하기!</button>
     <button onclick="innerHtml();">innerHTML로 표시하기!</button>
     <h1>현재 시각 : </h1>
     <div id = "current"></div>
