--- a/javascript/dom_ex01.html
+++ b/javascript/dom_ex01.html
@@ -10,7 +10,7 @@
     <li class="first">첫 번쨰 아이템이요!!</li>
     <li>두 번쨰 아이템이요!!</li>
     <li class="even">세 번쨰 아이템이요!!</li>
-    <li>네 번쨰 아이템이요!</li>
+    <li>네 번쨰 아이템이요!!</li>
     <li class="even">다섯 번쨰 아이템이요!</li>
 </ul>
     <script>
