--- a/javascript/dom_ex01.html
+++ b/javascript/dom_ex01.html
@@ -11,7 +11,7 @@
     <li>두 번쨰 아이템이요!!</li>
     <li class="even">세 번쨰 아이템이요!!</li>
     <li>네 번쨰 아이템이요!!</li>
-    <li class="even">다섯 번쨰 아이템이요!</li>
+    <li class="even">다섯 번쨰 아이템이요!!!</li>
 </ul>
     <script>
     const lis = document.querySelectorAll('li');
