--- a/javascript/dom_ex01.html
+++ b/javascript/dom_ex01.html
@@ -8,7 +8,7 @@
     <h1>요소 선택하기</h1>
 <ul>
     <li class="first">첫 번쨰 아이템이요!!!</li>
-    <li>두 번쨰 아이템이요!!</li>
+    <li>두 번쨰 아이템이요!!!</li>
     <li class="even">세 번쨰 아이템이요!!!</li>
     <li>네 번쨰 아이템이요!!</li>
     <li class="even">다섯 번쨰 아이템이요!!!</li>
