--- a/javascript/event_ex03.html
+++ b/javascript/event_ex03.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="small">
-    <img src="../image/coffee-pink.jpg" alt="에디오피가 게뎁" id="cup" width="200" height="200">
+    <img src="../image/coffee-pink.jpg" alt="에디오피가 게댑" id="cup" width="200" height="200">
     <div id="big">
         <img src="../image/coffee-pink.jpg" class="big" >
         <img src="../image/coffee-blue.jpg" class="big" >
