--- a/test/dom4.html
+++ b/test/dom4.html
@@ -11,9 +11,9 @@
 <img src="" alt="" class="rect">
 
 <script>
-    const rects = document.querySelectorAll('.rect');
+    const rects = document.querySelectorAll(".rect");
 
-    rects.forEach((rec,i) => {
+    rects.forEach((rec,i)=>{
         const width = (i+1)*100;
         const src = "../image/cat1.jpg";
         rec.setAttribute("src",src);
