--- a/test/dom_ex4.html
+++ b/test/dom_ex4.html
@@ -14,10 +14,11 @@
         let now = new Date();
 
         function textCon(){
-            document.querySelector("#current").textContent = `<b>${now}</b>`;
+            document.querySelector('#current').textContent = `<b>${now}</b>`
         }
+
         function innerHtml(){
-            document.querySelector("#current").innerHTML = `<b>${now}</b>`;
+            document.querySelector('#current').innerHTML = `<b>${now}</b>`
         }
     </script>
 </body>
