--- a/test/js_ex3.html
+++ b/test/js_ex3.html
@@ -20,7 +20,7 @@
                 <input type="button" value="+" onclick="cal('+')">
                 <input type="button" value="-" onclick="cal('-')">
                 <input type="button" value="*" onclick="cal('*')">
-                <input type="button" value=% onclick="cal('%')">
+                <input type="button" value="/" onclick="cal('/')">
             </th>
         </tr>
         <tr>
@@ -31,15 +31,15 @@
 
     <script>
         function cal(op = '*'){
-            let n1 = Number(document.querySelector("#num1").value)
-            let n2 = Number(document.querySelector("#num2").value)
+            let n1 = Number(document.querySelector('#num1').value);
+            let n2 = Number(document.querySelector('#num2').value);
             switch (op){
                 case "+" : sum = n1+n2; break;
                 case "-" : sum = n1-n2; break;
                 case "*" : sum = n1*n2; break;
-                case "%" : sum = n1%n2; break;
+                case "/" : sum = n1/n2; break;
             }
-            document.querySelector("#result").value = sum;
+            document.querySelector('#result').value = sum;
         }
     </script>
 
