--- a/html/css_ex5.html
+++ b/html/css_ex5.html
@@ -44,7 +44,7 @@
 
 <body>
 	<div id="container">
-		<img src="../image/apple.jpg" alt="가정용 꿀사과 - 흠집이 있고 약간은 못생겼지만 맛과 영양은 그대로입니다. 질좋은 사과를 저렴하게 즐겨보세요">		
+		<img src="../image/apple.jpg" alt="가정용 꿀사과 - 흠집이 있고 약간은 못생겼지만 맛과 영양은 그대로입니다. 질좋은 사과를 저렴하게 즐겨보세요!">		
 		<div id="check">
 			<h1>확인하세요</h1>
 			<h2>주문 및 배송</h2>
