--- a/html/css_ex5.html
+++ b/html/css_ex5.html
@@ -48,7 +48,7 @@
 		<div id="check">
 			<h1>확인하세요</h1>
 			<h2>주문 및 배송</h2>
-			<p><span>오후 2시 이전</span> 주문건은 당일 발송합니다<br>
+			<p><span>오후 2시 이전</span> 주문건은 당일 발송합니다.<br>
 			2시 이후 주문건은 다음날 발송합니다(주말 제외)</p>
 			<hr>
 			<h2>교환 및 환불</h2>
