--- a/javascript/event_ex02.html
+++ b/javascript/event_ex02.html
@@ -6,18 +6,19 @@
 </head>
 <body>
 <img src="../image/cup-1.png" id="c1" alt="컵">
-<script>
+    <script>
     let cup = document.querySelector("#c1");
-    let iscup = true;
-//
-    cup.addEventListener("click", () => {
-        if (iscup) {
-            cup.src = "../image/cup-2.png";
-        } else {
-            cup.src = "../image/cup-1.png";
+    let redcup = true;
+
+    cup.addEventListener("click",()=>{
+        if(redcup){
+            cup.setAttribute("src","../image/cup-2.png");
+            redcup = false;
+        }else{
+            cup.setAttribute("src","../image/cup-1.png");
+            redcup = true;
         }
-        iscup = !iscup; // 상태 토글
     });
-</script>
+    </script>
 </body>
 </html>
