--- a/test/js_ex01.html
+++ b/test/js_ex01.html
@@ -19,24 +19,23 @@
 
 <script>
     let num = 1;
-    function gallery(dir) {
-        if (dir === 1) {
-            if (num === 8) {
-                alert("마지막 입니다.");
+    function gallery(dir){
+        if(dir === 1){
+            if(num ===8){
+                alert("마지막입니다.");
                 return;
             }
             num++;
-        } else {
-            if (num === 1) {
-                alert("첫 번째 입니다.")
+        }else{
+            if(num===1){
+                alert("처음입니다.");
                 return;
             }
             num--;
         }
+        let imgTag = document.querySelector("#photo");
+        imgTag.setAttribute("src",`../image/mov0${num}.jpg`);
 
-
-        const imgTag = document.querySelector("#photo");
-        imgTag.setAttribute("src", `../image/mov0${num}.jpg`)
     }
 
 
