--- a/test/dom_ex1.html
+++ b/test/dom_ex1.html
@@ -14,12 +14,11 @@
         <li>다섯 번쨰 아이템</li>
     </ul>
     <script>
-        let lis = document.querySelectorAll("li");
-        lis.forEach((li,index) => {
-            if(index % 2 === 1) li.style.color = 'blue';
-            if(index === 0 ) li.style.color = 'red';
+        let Item = document.querySelectorAll("li");
 
-        });
+        for(const item of Item){
+            item.style.color = "blue";
+        }
     </script>
 </body>
 </html>
