--- a/html/css_ex5.html
+++ b/html/css_ex5.html
@@ -55,6 +55,8 @@
 			<p>불만족시 <span class="accent">100% 환불</span>해 드립니다<br>
 			고객센터로 전화주세요</p>
 			<hr>
+
+            <!-- 하하하 -->
 			<h2>고객센터 </h2>
 			<p>0000-0000<br>
 			<span class="smalltext">상담시간 : 오전 9시 ~ 오후 6시 (토/일, 공휴일 휴무)</span></p>
